@startuml Class Diagram
skinparam classAttributeIconSize 0

package "gui" {
    class LoginFrame {
        - facade: RentalSystemFacade
        - cardContainer: JPanel
        - cardLayout: CardLayout
        - loginIdField: JTextField
        - loginNameField: JTextField
        - regIdField: JTextField
        - regNameField: JTextField
        - regTypeCombo: JComboBox<String>
        - initializeUI(): void
        - createLoginPanel(): JPanel
        - createRegisterPanel(): JPanel
        - createPrimaryButton(text: String): JButton
        - handleUserLogin(): void
        - handleUserRegister(): void
        - showAdminLoginDialog(): void
    }

    class RentalAppGUI {
        - facade: RentalSystemFacade
        - isAdmin: boolean
        - adminInventoryTable: JTable
        - adminInventoryModel: DefaultTableModel
        - addIdField: JTextField
        - addNameField: JTextField
        - addRateField: JTextField
        - addCategoryCombo: JComboBox<String>
        - updateNameField: JTextField
        - updateRateField: JTextField
        - updateStatusCombo: JComboBox<String>
        - adminRentalsTable: JTable
        - adminRentalsModel: DefaultTableModel
        - userCatalogTable: JTable
        - userCatalogModel: DefaultTableModel
        - rentDurationField: JTextField
        - cartSummaryLabel: JLabel
        - userRentalsTable: JTable
        - userRentalsModel: DefaultTableModel
        - returnDaysField: JTextField
        - damageCheck: JCheckBox
        - receiptArea: JTextArea
        - initializeUI(): void
        - handleLogout(): void
        - handleInventorySelect(): void
        - handleAddEquipment(): void
        - handleUpdateEquipment(): void
        - handleRemoveEquipment(): void
        - updateCartSummary(): void
        - handleCheckout(): void
        - handleReturn(): void
        - refreshAllData(): void
    }
}

package "facade" {
    class RentalSystemFacade {
        - equipmentManager: EquipmentManager
        - rentalManager: RentalManager
        - billingManager: BillingManager
        - registeredUsers: List<User>
        - currentUser: User
        - isAdminSession: boolean
        + adminLogin(id: String, password: String): boolean
        + userLogin(id: String, name: String, userTypeStr: String): String
        + isUserRegistered(id: String): boolean
        + logout(): void
        + getCurrentUser(): User
        + addEquipment(id: String, name: String, category: String, rate: double): void
        + removeEquipment(id: String): void
        + updateEquipment(id: String, name: String, rate: double, statusStr: String): void
        + getAllEquipment(): List<Equipment>
        + getAvailableEquipment(): List<Equipment>
        + rentEquipmentList(equipmentIds: List<String>, durationDays: int): String
        + returnEquipment(recordId: String, actualDurationDays: int, isDamaged: boolean): String
        + getActiveRentals(): List<RentalRecord>
        + getCurrentUserActiveRentals(): List<RentalRecord>
        + getAllRentals(): List<RentalRecord>
    }
}

package "manager" {
    class EquipmentManager {
        - inventory: List<Equipment>
        + addEquipment(equipment: Equipment): void
        + removeEquipment(equipment: Equipment): void
        + getAllEquipment(): List<Equipment>
        + getAvailableEquipment(): List<Equipment>
        + findEquipmentById(id: String): Optional<Equipment>
    }

    class RentalManager {
        - records: List<RentalRecord>
        + createRental(user: User, equipment: Equipment, durationDays: int, rentDate: LocalDate, depositPaid: double): RentalRecord
        + getAllRecords(): List<RentalRecord>
        + findRecordById(recordId: String): Optional<RentalRecord>
        + getActiveRecords(): List<RentalRecord>
    }

    class BillingManager {
        + calculateBill(user: User, equipment: Equipment, actualDurationDays: int, plannedDurationDays: int, isDamaged: boolean, depositPaid: double): Bill
    }
}

package "model" {
    abstract class Equipment {
        - equipmentId: String
        - name: String
        - category: String
        - dailyRentalRate: double
        - status: EquipmentStatus
        + getEquipmentId(): String
        + getName(): String
        + setName(name: String): void
        + getCategory(): String
        + getDailyRentalRate(): double
        + setDailyRentalRate(rate: double): void
        + getStatus(): EquipmentStatus
        + setStatus(status: EquipmentStatus): void
        + isAvailable(): boolean
        + {abstract} calculateBaseFee(days: int): double
        + {abstract} calculatePenalty(lateDays: int, isDamaged: boolean): double
    }

    enum EquipmentStatus {
        AVAILABLE
        RENTED
        MAINTENANCE
        DAMAGED
    }

    class Electronics {
        + calculateBaseFee(days: int): double
        + calculatePenalty(lateDays: int, isDamaged: boolean): double
    }

    class MediaEquipment {
        + calculateBaseFee(days: int): double
        + calculatePenalty(lateDays: int, isDamaged: boolean): double
    }

    class LaboratoryEquipment {
        + calculateBaseFee(days: int): double
        + calculatePenalty(lateDays: int, isDamaged: boolean): double
    }

    class User {
        - userId: String
        - name: String
        - type: UserType
        + getUserId(): String
        + getName(): String
        + getType(): UserType
    }

    enum UserType {
        STUDENT
        STAFF
        FINAL_YEAR_STUDENT
    }

    class RentalRecord {
        - recordId: String
        - user: User
        - equipment: Equipment
        - plannedDurationDays: int
        - rentDate: LocalDate
        - returnDate: LocalDate
        - status: RentalStatus
        - depositPaid: double
        - bill: Bill
        + getRecordId(): String
        + getUser(): User
        + getEquipment(): Equipment
        + getPlannedDurationDays(): int
        + getRentDate(): LocalDate
        + getReturnDate(): LocalDate
        + getStatus(): RentalStatus
        + getDepositPaid(): double
        + getBill(): Bill
        + setReturnDate(returnDate: LocalDate): void
        + setStatus(status: RentalStatus): void
        + setBill(bill: Bill): void
    }

    enum RentalStatus {
        ACTIVE
        RETURNED
    }

    class Bill {
        - baseFee: double
        - discountAmount: double
        - penaltyAmount: double
        - depositPaid: double
        - totalCharges: double
        - netSettlement: double
        - user: User
        - equipment: Equipment
        - actualDurationDays: int
        - plannedDurationDays: int
        - isDamaged: boolean
        + getBaseFee(): double
        + getDiscountAmount(): double
        + getPenaltyAmount(): double
        + getDepositPaid(): double
        + getTotalCharges(): double
        + getNetSettlement(): double
        + generateDetailedReceipt(): String
    }
}

' Relationships
LoginFrame --> RentalSystemFacade
LoginFrame ..> RentalAppGUI : creates

RentalAppGUI --> RentalSystemFacade

RentalSystemFacade *-- EquipmentManager
RentalSystemFacade *-- RentalManager
RentalSystemFacade *-- BillingManager
RentalSystemFacade o-- User

EquipmentManager o-- Equipment
RentalManager o-- RentalRecord

RentalRecord --> User
RentalRecord --> Equipment
RentalRecord --> Bill

User +-- UserType
RentalRecord +-- RentalStatus
Equipment +-- EquipmentStatus

Electronics -up-|> Equipment
MediaEquipment -up-|> Equipment
LaboratoryEquipment -up-|> Equipment

@enduml
